--- a/app/src/main/res/layout/activity_uts.xml
+++ b/app/src/main/res/layout/activity_uts.xml
@@ -19,7 +19,20 @@
         />
     <TextView
         android:id="@+id/tv_nama"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        />
+    <TextView
+        android:id="@+id/tv_nomor"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Informasi Pendaftaran Dari:"
+        android:layout_marginTop="20dp"
         />
 </LinearLayout>
